Updated Color and Vector 2 Fixed Image Loading

--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -169,7 +169,9 @@
     <ClCompile Include="Framework\Actor.cpp" />
     <ClCompile Include="Framework\Scene.cpp" />
     <ClCompile Include="Input\InputSystem.cpp" />
+    <ClCompile Include="Math\Color.cpp" />
     <ClCompile Include="Math\MathUtils.cpp" />
+    <ClCompile Include="Math\Vector2.cpp" />
     <ClCompile Include="Renderer\Font.cpp" />
     <ClCompile Include="Renderer\Model.cpp" />
     <ClCompile Include="Renderer\Renderer.cpp" />
