--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -208,6 +208,7 @@
     <ClInclude Include="Framework\GameObject.h" />
     <ClInclude Include="Framework\Scene.h" />
     <ClInclude Include="Input\InputSystem.h" />
+    <ClInclude Include="Json.h" />
     <ClInclude Include="Math\Color.h" />
     <ClInclude Include="Math\MathUtils.h" />
     <ClInclude Include="Math\Matrix2x2.h" />
@@ -231,6 +232,7 @@
     <Text Include="..\Build\Assets\Enemy.txt" />
     <Text Include="..\Build\Assets\Enemy2.txt" />
     <Text Include="..\Build\Assets\Explosion.txt" />
+    <Text Include="..\Build\Assets\Levels\level.txt" />
     <Text Include="..\Build\Assets\Player.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
