--- a/Engine/Engine.vcxproj
+++ b/Engine/Engine.vcxproj
@@ -181,6 +181,7 @@
     <ClCompile Include="Core\Time.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Framework\Actor.cpp" />
+    <ClCompile Include="Framework\EventManager.cpp" />
     <ClCompile Include="Framework\Scene.cpp" />
     <ClCompile Include="Input\InputSystem.cpp" />
     <ClCompile Include="Math\Color.cpp" />
@@ -220,6 +221,8 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Framework\Actor.h" />
     <ClInclude Include="Framework\Component.h" />
+    <ClInclude Include="Framework\Event.h" />
+    <ClInclude Include="Framework\EventManager.h" />
     <ClInclude Include="Framework\Factory.h" />
     <ClInclude Include="Framework\Game.h" />
     <ClInclude Include="Framework\GameObject.h" />
